tests/sawn/fixtures/valid/17_single_column_table.sawn
// Test: Table with single column (minimum columns = 1)
names[][] name
  "Alice"
  "Bob"
  "Carol"
