tests/sawn/fixtures/invalid/14_table_no_columns.sawn
// INVALID: Table with no column names but has children
data[][]
  1
  2
